src/intro/assets/css/styles.css
/*   
 * Template Name: Velocity - Responsive Website Template for Products
 * Version: 2.2
 * Author: Xiaoying Riley at 3rd Wave Media
 * Website: http://themes.3rdwavemedia.com/
 * Twitter: @3rdwave_themes
*/
/* ======= Base ======= */
body {
  font-family: 'Roboto', arial, sans-serif;
  color: #444;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
p {
  margin-bottom: 15px;
  line-height: 1.5;
  text-align: justify;
}
a {
  color: #db2a0b;
  -webkit-transition: all 0.4s ease-in-out;
  -moz-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
}
a:hover {
  text-decoration: underline;
  color: #db2a0b;
}
a:focus {
  text-decoration: none;
}
.btn {
  font-size: 14px;
}
.btn,
a.btn {
  -webkit-transition: all 0.4s ease-in-out;
  -moz-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
  font-weight: bold;
}
.btn .fa,
a.btn .fa {
  color: #fff;
  margin-right: 5px;
}
a.btn-cta,
.btn-cta {
  padding: 8px 30px;
}
a.btn-cta-primary,
.btn-cta-primary {
  background: #db2a0b;
  border: 2px solid #db2a0b;
  color: #fff;
}
a.btn-cta-primary:hover,
.btn-cta-primary:hover {
  background: #b82309;
  border: 2px solid #b82309;
  color: #fff;
}
a.btn-cta-secondary,
.btn-cta-secondary {
  background: none;
  border: 2px solid #db2a0b;
  color: #db2a0b;
}
a.btn-cta-secondary:hover,
.btn-cta-secondary:hover {
  background: #db2a0b;
  border: 2px solid #db2a0b;
  color: #fff;
}
a.btn-ghost,
.btn-ghost {
  background: none;
  border: 1px solid #fff;
  color: #fff !important;
  padding: 8px 20px;
  vertical-align: middle;
}
a.btn-ghost:hover,
.btn-ghost:hover {
  background: #db2a0b;
  border: 1px solid #db2a0b;
  color: #fff;
}
a.btn-ghost .fa,
.btn-ghost .fa {
  margin-right: 10px;
  font-size: 22px;
}
a.btn-ghost .text,
.btn-ghost .text {
  position: relative;
  top: -2px;
}
.highlight {
  color: #db2a0b;
}
.form-control {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  height: 40px;
  border-color: #eee;
}
.form-control::-webkit-input-placeholder {
  /* WebKit browsers */
  color: #a6a6a6;
}
.form-control:-moz-placeholder {
  /* Mozilla Firefox 4 to 18 */
  color: #a6a6a6;
}
.form-control::-moz-placeholder {
  /* Mozilla Firefox 19+ */
  color: #a6a6a6;
}
.form-control:-ms-input-placeholder {
  /* Internet Explorer 10+ */
  color: #a6a6a6;
}
.form-control:focus {
  border-color: #e1e1e1;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
textarea.form-control {
  height: auto;
}
.text-highlight {
  color: #952410;
}
input[type="text"],
input[type="email"],
input[type="password"],
input[type="submit"],
input[type="button"],
textarea,
select {
  appearance: none;
  /* for mobile safari */
  -webkit-appearance: none;
}
#topcontrol {
  background: #db2a0b;
  color: #fff;
  text-align: center;
  display: inline-block;
  width: 35px;
  height: 35px;
  border: none;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-transition: all 0.4s ease-in-out;
  -moz-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
  z-index: 30;
}
#topcontrol:hover {
  background: #b82309;
}
#topcontrol .fa {
  position: relative;
  top: 3px;
  font-size: 25px;
}
.video-container iframe {
  max-width: 100%;
}
/* ======= Header ======= */
.header {
  color: #fff;
  width: 100%;
  position: relative;
  z-index: 40;
  height: 80px;
}
.header.scrolled {
  height: 80px;
  top: 0;
}
.header.scrolled .main-nav .nav .nav-item a {
  color: #666;
  -webkit-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}
.header.scrolled .main-nav .nav .nav-item.nav-item-cta a.btn-cta-secondary {
  background: #db2a0b;
  border-color: #db2a0b;
}
.header.scrolled .main-nav .nav .dropdown-menu a {
  color: #fff;
}
.header h1.logo {
  font-family: "Roboto Slab", arial, sans-serif;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: bold;
  font-size: 55px;
  float: left;
}
.header h1.logo a {
  color: transparent;
  padding: 0px 0px;
  display: inline-block;
  text-align: center;
  line-height: 1.4;
  max-width: 0px;
  background: transparent;
  -webkit-border-top-right-radius: 0;
  -webkit-border-bottom-right-radius: 4px;
  -webkit-border-bottom-left-radius: 4px;
  -webkit-border-top-left-radius: 0;
  -moz-border-radius-topright: 0;
  -moz-border-radius-bottomright: 0px;
  -moz-border-radius-bottomleft: 0px;
  -moz-border-radius-topleft: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 0px;
  border-top-left-radius: 0;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-transition: color 0.4s ease-in-out;
  -moz-transition: color 0.4s ease-in-out;
  -ms-transition: color 0.4s ease-in-out;
  -o-transition: color 0.4s ease-in-out;
  position: relative;
  font-size: 20px;
}
.header h1.logo a:hover {
  text-decoration: none;
}
.header h1.logo .logo-title {
  vertical-align: middle;
  line-height: 1.6;
}
.header .main-nav {
  padding: 0;
  padding-top: 15px;
  z-index: 10;
}
.header .main-nav .navbar-toggler {
  border: none;
  cursor: pointer;
  -webkit-opacity: 0.8;
  -moz-opacity: 0.8;
  opacity: 0.8;
  position: absolute;
  right: 0px;
  top: -50px;
}
.header .main-nav .navbar-toggler:focus {
  outline: none;
}
.header .main-nav .navbar-toggler:hover {
  -webkit-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}
.header .main-nav .navbar-toggler-icon {
  background: transparent url('../images/hamburger-icon.svg') no-repeat center center;
}
.header .main-nav .navbar-collapse {
  padding: 0 15px;
}
/* ... */

